# AI-Chat-API-with-LLM-Inference

./: Cargo.toml
src/: main.rs
src/models/: chat.rs
src/routes/: chat.rs
src/services/: model_service.rs
